mobile overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,20 @@
 @import "https://fonts.googleapis.com/css?family=Montserrat:400,400i,700";
+html, body {
+    overflow-x: hidden !important;
+}
+body {
+    position: relative;
+}
 body {
     margin: 0;
     font-family: montserrat;
     overflow: hidden;
     background-color: #fff;
+}
+
+.wrapper {
+    overflow-x:hidden;
+    position: relative;
 }
 
 pre {
@@ -637,7 +648,7 @@ input {
 
 
 
-@media (min-width: 340px) and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 480px) {
     .service-img {
         margin-top: 5px;
         background-position: center;
